--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -25,7 +29,9 @@
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-jss": "^8.6.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
