--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "mongoose": "^5.5.6",
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-use": "^8.4.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
