--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.6",
+    "morgan": "^1.9.1",
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
     "qrcode.react": "^0.9.3",
