--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.6",
     "morgan": "^1.9.1",
     "next": "^8.1.0",
