--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     ]
   },
   "dependencies": {
+    "@arcblock/did-auth": "^0.25.2",
+    "@arcblock/did-auth-storage-mongo": "^0.20.1",
+    "@arcblock/forge-util": "^0.25.2",
+    "@arcblock/forge-wallet": "^0.25.2",
+    "@arcblock/graphql-client": "^0.25.2",
+    "@arcblock/mcrypto": "^0.25.2",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
@@ -30,8 +36,10 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.6",
     "morgan": "^1.9.1",
+    "multibase": "^0.6.0",
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
     "qrcode.react": "^0.9.3",
