--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "forge-react-starter",
+  "brand": "Forge React Starter",
   "version": "1.0.0",
   "main": "index.js",
   "author": "wangshijun <shijun@arcblock.io> https://github.com/wangshijun",
