--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     ]
   },
   "dependencies": {
-    "@arcblock/did-auth": "^0.25.2",
-    "@arcblock/did-auth-storage-mongo": "^0.20.1",
-    "@arcblock/forge-util": "^0.25.2",
-    "@arcblock/forge-wallet": "^0.25.2",
-    "@arcblock/graphql-client": "^0.25.2",
-    "@arcblock/mcrypto": "^0.25.2",
+    "@arcblock/did-auth": "latest",
+    "@arcblock/did-auth-storage-mongo": "latest",
+    "@arcblock/forge-util": "latest",
+    "@arcblock/forge-wallet": "latest",
+    "@arcblock/graphql-client": "latest",
+    "@arcblock/mcrypto": "latest",
+    "@arcblock/react-forge": "latest",
+    "@arcblock/react-hooks": "latest",
+    "@babel/polyfill": "^7.4.4",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
@@ -43,7 +45,6 @@
     "multibase": "^0.6.0",
     "next": "^8.1.0",
     "prop-types": "^15.7.2",
-    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
