--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-jss": "^8.6.1",
     "react-use": "^8.4.0",
     "styled-components": "^4.2.0"
