--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.16.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "mongodb": "3.0.11",
     "mongoose": "^5.4.21",
     "morgan": "^1.9.1",
     "multibase": "^0.6.0",
