--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint server client app.js",
     "build": "next build client",
-    "lambda": "netlify-lambda build server/functions",
+    "lambda": "netlify-lambda build server/functions --config webpack.functions.js",
     "export": "next build client && next export client",
     "netlify": "npm run export && npm run lambda",
     "start": "nodemon app.js -w server -w app.js"
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@arcblock/did-auth": "latest",
-    "@arcblock/did-auth-storage-mongo": "latest",
+    "@arcblock/did-auth-storage-mongo": "0.20.3",
     "@arcblock/forge-util": "latest",
     "@arcblock/forge-wallet": "latest",
     "@arcblock/graphql-client": "latest",
@@ -42,8 +42,7 @@
     "express-session": "^1.16.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "mongodb": "3.0.11",
-    "mongoose": "^5.4.21",
+    "mongoose": "5.4.23",
     "morgan": "^1.9.1",
     "multibase": "^0.6.0",
     "next": "^8.1.0",
