--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "lint": "eslint server client app.js",
     "build": "next build client",
-    "lambda": "netlify-lambda build server/functions --config webpack.functions.js",
     "export": "next build client && next export client",
-    "netlify": "npm run export && npm run lambda",
     "start": "nodemon app.js -w server -w app.js"
   },
   "lint-staged": {
@@ -45,7 +43,6 @@
     "mongoose": "5.4.23",
     "morgan": "^1.9.1",
     "multibase": "^0.6.0",
-    "netlify-lambda": "^1.4.7",
     "next": "^8.1.0",
     "next-plugin-custom-babel-config": "^1.0.2",
     "prop-types": "^15.7.2",
@@ -60,6 +57,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "chai": "^4.2.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
