--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint server client app.js",
     "build": "next build client",
     "export": "next build client && next export client",
+    "lambda": "parcel server/functions/app.js && rm dist/app.js.map",
+    "netlify": "npm run export && npm run lambda",
     "start": "nodemon app.js -w server -w app.js"
   },
   "lint-staged": {
@@ -45,6 +47,7 @@
     "multibase": "^0.6.0",
     "next": "^8.1.0",
     "next-plugin-custom-babel-config": "^1.0.2",
+    "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
