--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   # This will be run the site build
   command = "npm run netlify"
   # This is the directory is publishing to netlify's CDN
-  publish = "client/out"
+  publish = "client/dist"
   # functions build directory
-  functions = "dist"
+  functions = "server/dist"
