--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     ]
   },
   "dependencies": {
-    "@arcblock/did-auth": "latest",
-    "@arcblock/did-auth-storage-mongo": "0.21.0",
-    "@arcblock/forge-util": "latest",
-    "@arcblock/forge-wallet": "latest",
-    "@arcblock/graphql-client": "latest",
-    "@arcblock/mcrypto": "latest",
-    "@arcblock/react-forge": "latest",
-    "@arcblock/react-hooks": "latest",
+    "@arcblock/did": "^0.27.0",
+    "@arcblock/did-auth": "^0.27.2",
+    "@arcblock/did-auth-storage-mongo": "0.21.1",
+    "@arcblock/forge-util": "^0.27.0",
+    "@arcblock/forge-wallet": "^0.27.0",
+    "@arcblock/graphql-client": "^0.27.0",
+    "@arcblock/mcrypto": "^0.27.0",
+    "@arcblock/react-forge": "^0.5.6",
+    "@arcblock/react-hooks": "^0.5.0",
     "@babel/polyfill": "^7.4.4",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
