feat: basic flow of token based authentication

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@arcblock/forge-wallet": "^0.27.0",
     "@arcblock/graphql-client": "^0.27.0",
     "@arcblock/mcrypto": "^0.27.0",
-    "@arcblock/react-forge": "^0.5.8",
+    "@arcblock/react-forge": "^0.5.10",
     "@arcblock/react-hooks": "^0.5.0",
     "@babel/polyfill": "^7.4.4",
     "@material-ui/core": "^3.9.3",
@@ -36,13 +36,13 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
-    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "express-session": "^1.16.1",
+    "express-bearer-token": "^2.4.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "5.4.23",
