--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forge-react-starter",
   "version": "0.6.0",
-  "main": "app.js",
+  "main": "starter.config.js",
   "author": "wangshijun <shijun@arcblock.io> https://github.com/wangshijun",
   "license": "MIT",
   "scripts": {
@@ -36,12 +36,14 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-bearer-token": "^2.4.0",
+    "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -58,6 +60,7 @@
     "react-jss": "^8.6.1",
     "react-use": "^8.4.0",
     "serverless-http": "^2.0.1",
+    "shelljs": "^0.8.3",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
