--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-bearer-token": "^2.4.0",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
+    "jss": "^9.8.7",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "5.4.23",
