--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-use": "^8.4.0",
     "serverless-http": "^2.0.1",
     "shelljs": "^0.8.3",
+    "store": "^2.0.12",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
